Fixed and added a visible and custom install App button

--- a/src/index.css
+++ b/src/index.css
@@ -1311,12 +1311,77 @@ hr.divider{
   border-radius: 5px;
   background-color: #021553;
   color: #fff;
+  font-weight: bold;
   transition: all 0.2s ease-in-out;
   &:hover {
     color: #021553;
     background-color: #ffff;
     box-shadow: 0px 0px 3px #000;
   }
+}
+.app-container {
+  display: flex;
+  justify-items: center;
+  border-right: 2px solid rgb(0, 128, 117);
+  border-radius: 20px;
+  background-color: rgb(0, 128, 117);
+  position: relative;
+  isolation: isolate;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0px 0px 4px #000;
+  &:hover {
+    box-shadow: 0px 0px 9px #000;
+  }
+  &::after {
+    position: absolute;
+    content: "";
+    right: 0;
+    border-radius: 20px;
+    top: 0;
+    height: 100%;
+    width: 50px;
+    background-color: azure;
+    z-index: -1;
+  }
+}
+.app-container > button {
+  position: relative;
+  color: #fff;
+  outline: none;
+  border: none;
+  padding: 0.5em;
+  background-color: transparent;
+  margin-right: 2em;
+  font-weight: 600;
+  isolation: isolate;
+  &::before {
+    position: absolute;
+    content: "⤑";
+    font-weight: bold;
+    right: 0;
+    margin-right: -0.77em;
+    font-size: 2rem;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  &::after {
+    position: absolute;
+    content: "▸";
+    font-weight: bold;
+    right: 0;
+    margin-right: -1.2em;
+    font-size: 1.7rem;
+    top: 50%;
+    margin-top: -0.1em;
+    transform: translateY(-50%);
+    color: rgb(0, 128, 117);
+    z-index: -2;
+  }
+}
+.app-container > img {
+  margin-right: 0.5em;
+  align-self: center;
 }
 .reveal-answer{
   background-color: rgba(127, 255, 212, 0.521);
@@ -1475,6 +1540,9 @@ footer{
 .Phone-number {
   display: flex;
   padding: 0.5em;
+  & p {
+    margin-bottom: 0.5em;
+  }
 }
 
 .not-available{
